[package]
name = "qbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12"
thiserror = "1.0"
paste = "1.0"
cfg-if = "1.0"
libc = "0.2"
errno = "0.3"

[build-dependencies]
glob = "0.3"
cc = "1.0"
bindgen = "0.65"
