[package]
name = "qbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
paste = "1.0"
cfg-if = "1.0"
libc = { version = "0.2", optional = true }
errno = { version = "0.3", optional = true }

[features]
default = ["qbe-compile"]
qbe-compile = ["libc", "errno", "glob", "cc", "bindgen"]

[build-dependencies]
glob = { version = "0.3", optional = true }
cc = { version = "1.0", optional = true }
bindgen = { version = "0.65", optional = true }
